Fix RSS logo alignment on mobile.

--- a/Stylesheets/Mobile/scaffold.css
+++ b/Stylesheets/Mobile/scaffold.css
@@ -107,5 +107,5 @@
 	width: 24px;
 	height: 24px;
 
-	vertical-align: -0.05em;
+	vertical-align: -0.4em;
 }
